    * Attacks can have custom alignment relative to their targets [James]
    * There is now a global pool of NPC definitions that can be used on
      any map to supplement the local per-map NPCs [James]
    * Turn-based battle bit "Don't break Speed ties randomly" [Ralph]
    * "Ignore MP~ stat" general preference bit, so you can use the stat for
      something else [Ralph]

   * New Plotscripting Features
    * "set timer args" [Ralph]
    * "sl:walkabout sprite" alias to "sl:walkabout sprite component" and
      "sl:walkabout shadow" alias to "sl:walkabout shadow component"
    * "get scancode name" works for joy: scancodes too [Ralph]
    * "expand strings in slices" [James]
    * "hero is chasing" and "npc is chasing" [James]
    * "max map id" [James]
    * "get slice lookup name" [Ralph]
    * "create global npc", "global npc reference", "get npc pool" [James]
    * Commands that now accept an optional "pool" argument:
      "alter npc", "npc reference", "npc copy count", "change npc id",
      "create npc", "read npc" [James]
    * "gracefully dismount vehicle" [James]

  *** Changes
    * NPCpush:vertical and NPCpush:horizontal script constants were swapped with
      with each other! They've been swapped the right way. This fix only takes
      effect when you reimport your scripts.
    * MP~/Focus and Hits stats are no longer limited to 100 and 20 in the editors

  *** Bugfixes
    * "set opacity" (with opacity < 100%) didn't always turn on blending
      [Ralph]
    * Bug #1118 In turn-based battles, non-blocking attacks delayed by X
      attacks could delay by up to X turns. You have to turn off the "Non-turn
      attack delays can also cause turn delays" back-compatibility bit to get
      this bugfix [Ralph]
    * Experience required to level is no longer shown in the Status screen
      for heroes that reached max level. If all heroes are at max level,
      battles no longer tell that you gained experience [Ralph]