@@ -157,8 +157,9 @@ config_prefix = "edit."
 '========================== Process commandline flags =========================
 
 'Read the default backend from config first so that --gfx overrides it.
-'And if it's missing, default to SDL, for resizable windows
+'And if it's missing, default to SDL/SDL2: currently only these support non-320x200
 prefer_gfx_backend "sdl"
+prefer_gfx_backend "sdl2"
 DIM backend as string = read_config_str("gfx.backend")
 IF LEN(backend) THEN prefer_gfx_backend backend
 
