@@ -29,10 +29,14 @@ support\rm -f hspeak.exe
 CALL scons hspeak relump unlump %SCONS_ARGS%
 IF NOT EXIST hspeak.exe GOTO FAILURE
 
+support\rm -f game.exe custom.exe
+call scons gfx=directx+sdl+fb music=sdl %SCONS_ARGS%
+call distrib-nightly-win-packnupload music_sdl gfx_directx.dll SDL.dll SDL_mixer.dll
+
 REM This is the default build (default download is symlinked to it on the server)
 support\rm -f game.exe custom.exe
-call scons music=sdl %SCONS_ARGS%
-call distrib-nightly-win-packnupload music_sdl gfx_directx.dll SDL.dll SDL_mixer.dll
+call scons gfx=sdl2+directx+fb music=sdl2 %SCONS_ARGS%
+call distrib-nightly-win-packnupload sdl2 gfx_directx.dll SDL2.dll SDL2_mixer.dll
 
 ECHO Packaging ohrrpgce-win-installer-wip.exe ...
 REM Create the installer from the executables we just built: the installer and .zips for default build configs
@@ -47,32 +51,31 @@ IF EXIST distrib\ohrrpgce-win-installer-wip.exe (
 
 ECHO Packaging game player ohrrpgce-player-win-wip.zip ...
 support\rm -f distrib\ohrrpgce-player-win-wip.zip
-support\zip -9 -q distrib\ohrrpgce-player-win-wip.zip game.exe SDL.dll SDL_mixer.dll gfx_directx.dll LICENSE-binary.txt README-player-only.txt svninfo.txt
+support\zip -9 -q distrib\ohrrpgce-player-win-wip.zip game.exe SDL2.dll SDL2_mixer.dll gfx_directx.dll LICENSE-binary.txt README-player-only.txt svninfo.txt
 pscp -q distrib\ohrrpgce-player-win-wip.zip %SCPHOST%:%SCPDEST%
 
 support\rm -f game.exe custom.exe
 call scons music=native %SCONS_ARGS%
-call distrib-nightly-win-packnupload music_native gfx_directx.dll SDL.dll audiere.dll
+call distrib-nightly-win-packnupload music_native gfx_directx.dll SDL2.dll audiere.dll
 
 support\rm -f game.exe custom.exe
 call scons music=native2 %SCONS_ARGS%
-call distrib-nightly-win-packnupload music_native2 gfx_directx.dll SDL.dll audiere.dll
+call distrib-nightly-win-packnupload music_native2 gfx_directx.dll SDL2.dll audiere.dll
 
 support\rm -f game.exe custom.exe
 call scons music=silence %SCONS_ARGS%
-call distrib-nightly-win-packnupload music_silence gfx_directx.dll SDL.dll
+call distrib-nightly-win-packnupload music_silence gfx_directx.dll SDL2.dll
 
 REM support\rm -f game.exe custom.exe
 REM call scons gfx=alleg+directx+fb+sdl music=sdl %SCONS_ARGS%
 REM call distrib-nightly-win-packnupload gfx_alleg-music_sdl alleg40.dll SDL.dll SDL_mixer.dll
 
 support\rm -f game.exe custom.exe
-call scons gfx=sdl2+directx+fb music=sdl2 %SCONS_ARGS%
-call distrib-nightly-win-packnupload sdl2 gfx_directx.dll SDL2.dll SDL2_mixer.dll
+call scons debug=2 pdb=1
+call distrib-nightly-win-packnupload sdl2-debug gfx_directx.dll SDL2.dll SDL2_mixer.dll misc\gdbcmds1.txt misc\gdbcmds2.txt gdbgame.bat gdbcustom.bat
 
-support\rm -f game.exe custom.exe
-call scons music=sdl debug=2 pdb=1
-call distrib-nightly-win-packnupload music_sdl-debug gfx_directx.dll SDL.dll SDL_mixer.dll misc\gdbcmds1.txt misc\gdbcmds2.txt gdbgame.bat gdbcustom.bat
+REM Note: when adding or modifying builds, BACKENDS_SYMSNAME in misc/process_crashreports.py should be updated
+
 
 REM Note that this is duplicated in distrib-nightly-linux.sh
 Echo upload plotdict.xml
